fixed overflow-x with smooth-scroll div

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -24,8 +24,9 @@ nav {
 .scrolling-box {
 	height: 100vh;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	scroll-behavior: smooth;
-	width: 100%;
+	width: 100vw;
 }
 
 header {
